-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.14.0
-
None
-
Windows 10, GCC 10.2, MinGW-w64 8.0
-
-
084944a96b79a822c670a389b53388996cf0548d (qt-creator/qt-creator/4.14)
I am using MinGW-w64 8.0 / GCC 10.2.0 some header files define interface as struct, like
#define interface struct
but in file $\src\libs\sqlite\sqlitetransaction.h file
multiple places using interface as variable name, it cause build fails,
rename to other names works.
maybe some mingw/gcc build can pass it, but it is still a risk to use potential keyword/reserved words as a variable name.