Fix Qt Creator + Coco build

param name "interface" is causing Qt Creator build fail when integrating
Froglogic Coco tools with Qt Creator.

Fixes: QTCREATORBUG-25146
Change-Id: If3fa3d44e941089a882deb44ba12dec6d00ad73d
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>
(cherry picked from commit f30565873a067b29ccb62cf1b728b183afd4bf36)